<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/are_you_sure"
        android:textSize="28sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/this_will_stop_workout" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/confirmationYes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/yes" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/confirmationNo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no" />
</LinearLayout>